Cabal-Version:       1.18
Name:                test-framework
Version:             0.8.2.2
x-revision:          1

Category:            Testing
Synopsis:            Framework for running and organising tests, with HUnit and QuickCheck support
Description:         Allows tests such as QuickCheck properties and HUnit test cases to be assembled into test groups, run in
                     parallel (but reported in deterministic order, to aid diff interpretation) and filtered and controlled by
                     command line options. All of this comes with colored test output, progress reporting and test statistics output.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Andreas Abel
Homepage:            https://github.com/haskell/test-framework#readme
Bug-Reports:         https://github.com/haskell/test-framework/issues
Build-Type:          Simple

Tested-With:
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Extra-Doc-Files: ChangeLog.md

Library
        hs-source-dirs:         src
        Exposed-Modules:        Test.Framework
                                Test.Framework.Options
                                Test.Framework.Providers.API
                                Test.Framework.Runners.Console
                                Test.Framework.Runners.Options
                                Test.Framework.Runners.TestPattern
                                Test.Framework.Runners.API
                                Test.Framework.Seed

        Other-Modules:          Test.Framework.Core
                                Test.Framework.Improving
                                Test.Framework.Runners.Console.Colors
                                Test.Framework.Runners.Console.ProgressBar
                                Test.Framework.Runners.Console.Run
                                Test.Framework.Runners.Console.Statistics
                                Test.Framework.Runners.Console.Table
                                Test.Framework.Runners.Console.Utilities
                                Test.Framework.Runners.Core
                                Test.Framework.Runners.Processors
                                Test.Framework.Runners.Statistics
                                Test.Framework.Runners.ThreadPool
                                Test.Framework.Runners.TimedConsumption
                                Test.Framework.Runners.XML.JUnitWriter
                                Test.Framework.Runners.XML
                                Test.Framework.Utilities

        -- Lower bounds picked from LTS-7.24 (GHC 8.0.1)
        Build-Depends:          base           >= 4.9      && < 5
                              , ansi-terminal  >= 0.6.3    && < 1.2
                              , ansi-wl-pprint >= 0.6.7    && < 1.1
                              , random         >= 1.1      && < 1.4
                              , containers     >= 0.5.7    && < 1
                              , regex-posix    >= 0.95.2   && < 0.97
                              , old-locale     >= 1.0      && < 1.1
                              , time           >= 1.6      && < 1.15
                              , xml            >= 1.3.14   && < 1.4
                              , hostname       >= 1.0      && < 1.1

        Default-Language:       Haskell2010
        Default-Extensions:     CPP
                                PatternGuards
                                ExistentialQuantification
                                RecursiveDo
                                FlexibleInstances
                                TypeSynonymInstances
                                TypeOperators
                                FunctionalDependencies
                                MultiParamTypeClasses
                                NondecreasingIndentation
                                  -- workaround https://github.com/haskell/cabal/issues/4443

        Ghc-Options:            -Wno-deprecations
                                   -- This package is legacy and won't address deprecation warnings.

        if impl(ghc)
                Cpp-Options:    -DCOMPILER_GHC


Test-Suite test-framework-tests
        hs-source-dirs:         test src
        other-modules:          Test.Framework.Tests.Runners.ThreadPool
                                Test.Framework.Tests.Runners.XMLTests

                                Test.Framework.Core
                                Test.Framework.Improving
                                Test.Framework.Options
                                Test.Framework.Runners.Core
                                Test.Framework.Runners.Options
                                Test.Framework.Runners.TestPattern
                                Test.Framework.Runners.ThreadPool
                                Test.Framework.Runners.XML.JUnitWriter
                                Test.Framework.Seed
                                Test.Framework.Utilities
        Main-Is:                Tests.hs
        Type:                   exitcode-stdio-1.0

        -- Lower bounds from LTS-9.21 (GHC 8.0.2)
        Build-Depends:          HUnit          >= 1.5.0.0
                              , QuickCheck     >= 2.9.2   && < 3
                              , base           >= 4.9     && < 5
                              , random         >= 1.1
                              , containers     >= 0.5.7
                              , ansi-terminal  >= 0.6.3
                              , ansi-wl-pprint >= 0.6.7
                              , regex-posix    >= 0.95.2
                              , old-locale     >= 1.0
                              , time           >= 1.6
                              , xml            >= 1.3.14
                              , hostname       >= 1.0
                              , bytestring     >= 0.10.8
                              , semigroups     >= 0.18

        Default-Language:       Haskell2010
        Default-Extensions:     CPP
                                PatternGuards
                                ExistentialQuantification
                                RecursiveDo
                                FlexibleInstances
                                TypeSynonymInstances
                                TypeOperators
                                FunctionalDependencies
                                MultiParamTypeClasses
                                NondecreasingIndentation

        Cpp-Options:            -DTEST

        Ghc-Options:            -threaded
                                -Wall
                                -Wno-deprecations
                                   -- This package is legacy and won't address deprecation warnings.

        if impl(ghc)
                Cpp-Options:    -DCOMPILER_GHC

Source-Repository head
  Type:     git
  Location: https://github.com/haskell/test-framework.git
  subdir:   core
