Cabal-Version:       1.18
Name:                test-framework-hunit
Version:             0.3.0.2
Category:            Testing
Synopsis:            HUnit support for the test-framework package.
License:             BSD3
License-File:        LICENSE
Author:              Max Bolingbroke <batterseapower@hotmail.com>
Maintainer:          Andreas Abel
Homepage:            http://haskell.github.io/test-framework/
Bug-Reports:         https://github.com/haskell/test-framework/issues
Build-Type:          Simple
Description:         @HUnit@ support for the @test-framework@ package.

Tested-With:
  GHC == 9.12.1
  GHC == 9.10.1
  GHC == 9.8.4
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Library
    Default-Language:       Haskell2010
    Default-Extensions:     TypeOperators
                            MultiParamTypeClasses

    Exposed-Modules:        Test.Framework.Providers.HUnit

    Build-Depends:          test-framework        == 0.8.*
                          , base                  >= 4.9      && < 5
                          , HUnit                 >= 1.5.0.0  && < 1.7
                          , extensible-exceptions >= 0.1.1    && < 0.2.0

    Ghc-Options:            -Wall

Source-Repository head
    Type:     git
    Location: https://github.com/haskell/test-framework.git
    subdir:   hunit
